webtunnel-bridge/webtunnel-bridge-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: webtunnel-bridge
  namespace: webtunnel-bridge
spec:
  selector:
    app: webtunnel-bridge
  ports:
    - name: ingress
      port: 8443
      targetPort: 8443
      protocol: TCP
